--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,8 @@ input[type="button"]:hover {
     z-index: 0;
 }
 
-.small-card-container p, .small-card-container h3 {
+.small-card-container p,
+.small-card-container h3 {
     z-index: 1;
     position: relative;
 }
